[gd_scene load_steps=6 format=3 uid="uid://c3poo7bdhm2vk"]

[ext_resource type="Texture2D" uid="uid://dm86op1qdupas" path="res://Egg/egg_spawner.png" id="1_po1jm"]
[ext_resource type="Script" path="res://Egg/ingredient_spawner.gd" id="2_d0wsf"]
[ext_resource type="Script" path="res://Egg/draggable_ingredient.gd" id="3_elxxd"]
[ext_resource type="Texture2D" uid="uid://m8sxg75v4fsc" path="res://Egg/egg_draggable.png" id="4_aha8e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2o78w"]
size = Vector2(253, 134)

[node name="IngredientSpawner" type="Node2D"]
position = Vector2(582, 291)
script = ExtResource("2_d0wsf")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_po1jm")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-2.5, 0)
shape = SubResource("RectangleShape2D_2o78w")

[node name="DraggableIngredient" type="Node2D" parent="."]
process_mode = 4
script = ExtResource("3_elxxd")

[node name="Sprite2D" type="Sprite2D" parent="DraggableIngredient"]
visible = false
position = Vector2(-2, 4)
scale = Vector2(0.046, 0.046)
texture = ExtResource("4_aha8e")

[connection signal="ingredient_grabbed" from="." to="DraggableIngredient" method="_on_ingredient_spawner_ingredient_grabbed"]
[connection signal="ingredient_released" from="." to="DraggableIngredient" method="_on_ingredient_spawner_ingredient_released"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
